--- a/pom.xml
+++ b/pom.xml
@@ -135,4 +135,45 @@
     </testResources>
 	</build>
 	
+	<profiles>
+		<profile>
+			<id>login_test</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>3.0.0-M4</version>
+						<configuration>
+						<testFailureIgnore> false </testFailureIgnore>
+							<suiteXmlFiles>
+								<suiteXmlFile>login_data.xml</suiteXmlFile>
+							</suiteXmlFiles>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	
+	<profile>
+			<id>payee_test</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>3.0.0-M4</version>
+						<configuration>
+						<testFailureIgnore> false </testFailureIgnore>
+							<suiteXmlFiles>
+								<suiteXmlFile>addPayee_data.xml</suiteXmlFile>
+							</suiteXmlFiles>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+	
+	
 </project>
